# unpacked-maybe-numeric

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  unpacked-maybe-numeric.cabal
.github/workflows/: build.yaml
src/Data/Maybe/Unpacked/Numeric/: Double.hs  Float.hs  Int.hs  Int16.hs  Int32.hs  Int64.hs  Int8.hs  Word.hs  Word128.hs  Word16.hs  Word32.hs  Word64.hs  Word8.hs
src/Data/Maybe/Unpacked/Numeric/Complex/: Double.hs  Float.hs
test/: laws.hs  spec.hs
