name: unpacked-maybe-numeric
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/andrewthad/unpacked-maybe-numeric#readme>
homepage: https://github.com/andrewthad/unpacked-maybe-numeric#readme
bug-reports: https://github.com/andrewthad/unpacked-maybe-numeric/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/unpacked-maybe-numeric

library
  exposed-modules:
    Data.Maybe.Unpacked.Numeric.Float
    Data.Maybe.Unpacked.Numeric.Double
    Data.Maybe.Unpacked.Numeric.Int
    --Data.Maybe.Unpacked.Numeric.Int8
    --Data.Maybe.Unpacked.Numeric.Int16
    --Data.Maybe.Unpacked.Numeric.Int32
    --Data.Maybe.Unpacked.Numeric.Int64
    Data.Maybe.Unpacked.Numeric.Word
    Data.Maybe.Unpacked.Numeric.Word8
    Data.Maybe.Unpacked.Numeric.Word16
    Data.Maybe.Unpacked.Numeric.Word32
    Data.Maybe.Unpacked.Numeric.Word64
  hs-source-dirs:
      src
  build-depends:
      base >=4.10.1.0 && <5
    , primitive >= 0.6.4
  ghc-options: -O2
  default-language: Haskell2010

